k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hydrology
  labels:
    name: hydrology
    environment: production
    app: hydrology-framework
